Fixing invisible privacy policy

--- a/css/branding.css
+++ b/css/branding.css
@@ -78,10 +78,14 @@ header h1 {
 	height: 10em;
 }
 
-#media-graph {
-	height: 50vh;
-}
-
 .split-card h2 {
 	margin-top: 2em;
+}
+
+.frame a {
+	color: var(--light);
+}
+
+.mid-light a {
+	color: var(--light);
 }
